--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main-screen">
-        <h1>Multiplayer Quiz Race</h1>
-        <button id="create-race-btn">Create Race</button>
-        <button id="find-race-btn">Join Race</button>
-    </div>
+  <div id="main-screen">
+    <!-- Add a logo image -->
+    <img src="logo.png" alt="Quiz Race Logo" style="width: 190px; height: auto; margin-bottom: 20px;">
+    <h1>🛎️ Tapping Quiz 🛎️</h1>
+    <h2>Who is the best? Wanna bet? 💸</h2>
+    <button id="create-race-btn">Create Race</button>
+    <button id="find-race-btn">Join Race</button>
+  </div>
+
 
     <!-- Create Race Screen -->
     <div id="create-race-screen" style="display:none;">
