--- a/index.html
+++ b/index.html
@@ -78,23 +78,22 @@
         <button id="go-back-btn-join">Go Back</button>
     </div>
 
-    <!-- Game Screen for Active Race -->
-    <div id="game-container" style="display:none;">
-        <div id="player-container"></div> <!-- Progress bar container -->
-        <button id="ready-btn">Ready</button> <!-- Ready button -->
-        <div id="ready-message"></div> <!-- Ready status message -->
-        <div id="countdown" style="display:none;">Race starts in <span id="countdown-timer">5</span> seconds!</div>
-        <button id="tap-btn" style="display:none;">Tap</button> <!-- Hidden until race starts -->
-
-        <!-- Quiz container -->
-        <div id="quiz-container" style="display:none;">
-            <h2 id="quiz-question"></h2>
-            <div id="quiz-options"></div>
-        </div>
-
-        <!-- Scoreboard -->
-        <ul id="score-list"></ul>
-    </div>
+<!-- Game Screen for Active Race -->
+<div id="game-container" style="display:none;">
+  <div id="player-status"></div> <!-- New section to display player readiness -->
+  <div id="player-container"></div> <!-- Progress bar container -->
+  <button id="ready-btn">Ready</button> <!-- Ready button -->
+  <div id="ready-message"></div> <!-- Ready status message -->
+  <div id="countdown" style="display:none;">Race starts in <span id="countdown-timer">5</span> seconds!</div>
+  <button id="tap-btn" style="display:none;">Tap</button> <!-- Hidden until race starts -->
+  <!-- Quiz container -->
+  <div id="quiz-container" style="display:none;">
+      <h2 id="quiz-question"></h2>
+      <div id="quiz-options"></div>
+  </div>
+  <!-- Scoreboard -->
+  <ul id="score-list"></ul>
+</div>
 
     <script type="module" src="app.js"></script>
 </body>
