--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 <div id="game-container" style="display:none;">
   <div id="player-status"></div> <!-- New section to display player readiness -->
   <div id="player-container"></div> <!-- Progress bar container -->
-  <button id="ready-btn">Ready</button> <!-- Ready button -->
+  <button id="ready-btn">Ready ✅</button> <!-- Ready button -->
   <div id="ready-message"></div> <!-- Ready status message -->
   <div id="countdown" style="display:none;">Race starts in <span id="countdown-timer">5</span> seconds!</div>
-  <button id="tap-btn" style="display:none;">Tap</button> <!-- Hidden until race starts -->
+  <button id="tap-btn" style="display:none;">⚡ Tap ⚡</button> <!-- Hidden until race starts -->
   <!-- Quiz container -->
   <div id="quiz-container" style="display:none;">
       <h2 id="quiz-question"></h2>
